--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "mongoose": "^6.0.14",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/testing": "^8.0.0",
     "@babel/core": "7.16.0",
     "@babel/node": "7.16.0",
     "@babel/plugin-proposal-decorators": "7.16.0",
@@ -29,6 +30,7 @@
     "@babel/preset-env": "7.16.0",
     "@babel/register": "7.16.0",
     "@babel/runtime": "7.16.3",
+    "@nestjs/testing": "^8.0.0",
     "jest": "27.3.1",
     "nodemon": "2.0.15",
     "prettier": "2.4.1",
